CHANGES.txt - 2008-02-25
------------------------

CHANGES IN CUPS V1.4b1

	- The network backends (ipp, lpd, socket) now support
	  SNMP-based supply and page count monitoring (STR #1655)
	- The lppasswd program is no longer installed setuid to
	  root to make the default installation more secure.
	- Added a new ppdLocalizeMarkerName() function to get
	  the localized version of a marker-names value.
	- The scheduler now provides the printer-dns-sd-name
	  attribute for printers shared via DNS-SD/Bonjour.
	- The pdftops filter now executes the Xpdf or poppler
	  pdftops utility to convert PDF files (STR #1471)
	- Bonjour printer registrations now advertise as local or
	  global based on the current access policies for the
	  printer.
	- cupsGetDests*() and cupsSetDests*() now track the last
	  used printer preference on Mac OS X.
	- Added a new streaming request API (STR #2261)
	- Added a new cupsGetNamedDest() function to the CUPS
	  library for faster printing with lp and lpr (STR #2638)
	- The scheduler now sets the PAM RHOST value on systems
	  that support it (STR #2637)
	- The scheduler now sandboxes child processes when
	  possible.
	- The Cancel-Job operation now supports a purge-job
	  attriibute to purge a specified job.
	- ppdEmit* and ppdCollect* now use the NonUIOrderDependency
	  attributes for custom option selections.
	- The web interface now enables/disables the printer
	  sharing (formerly publishing) controls based on the
	  server-is-sharing-printers state (STR #2233)
	- The scheduler now tracks printer sharing via the
	  server-is-sharing-printers attribute, and manages LPD
	  and SMB sharing as well (STR #2233)
	- The web interface now allows you to go back to the make/
	  manufacturer page if there is no matching printer driver
	  on the model page (STR #2436)
	- The printer list now shows the default media, banner, and
	  duplex options as well as the color and duplex capabilities
	  of printers (STR #1175)