@@ -1,8 +1,9 @@
-CHANGES.txt - 2008-02-25
+CHANGES.txt - 2008-02-26
 ------------------------
 
 CHANGES IN CUPS V1.4b1
 
+	- The scheduler now manages ICC color profiles on Mac OS X.
 	- The network backends (ipp, lpd, socket) now support
 	  SNMP-based supply and page count monitoring (STR #1655)
 	- The lppasswd program is no longer installed setuid to
